snapmotion for release

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />		
 		<link rel="stylesheet" href="css/shCore.css" type="text/css" />
 		<link rel="stylesheet" href="css/shThemeDefault.css" type="text/css" />
-		<link rel="stylesheet/less" href="css/snapmotion.less" type="text/css" />
+		<link rel="stylesheet" href="css/style.css" type="text/css" />
 		<script src="js/html5.js"></script>
 		<script src="js/less-1.0.18.min.js"></script>
 		<script src="js/shCore.js"></script>
 		<script src="js/shBrushXml.js"></script>
+		<script src="js/shBrushCss.js"></script>
 		<script src="js/shBrushJScript.js"></script>
 		<script src="js/jquery-1.4.2.min.js"></script>
 		<script src="js/jquery.snapmotion.js"></script>
@@ -22,14 +23,19 @@
 			</header>
 			<section class="main">
 				<ul id="slideshow">
-					<li><img src="img/test_image_1.jpg" alt="Test Image 1" width="960" height="399" /><span><h3>Heading here</h3><p>Lorem ispum dolor sit amet. Lorem ispum dolor sit amet. Lorem ispum dolor sit amet. Lorem ispum dolor sit amet. Lorem ispum dolor sit amet.</p></span></li>
-					<li><img src="img/test_image_2.jpg" alt="Test Image 2" width="960" height="399" /><span><h3>Heading here</h3><p>Lorem ispum dolor sit amet. Lorem ispum dolor sit amet. Lorem ispum dolor sit amet. Lorem ispum dolor sit amet. Lorem ispum dolor sit amet.</p></span></li>
-					<li><img src="img/test_image_3.jpg" alt="Test Image 3" width="960" height="399" /><span><h3>Heading here</h3><p>Lorem ispum dolor sit amet. Lorem ispum dolor sit amet. Lorem ispum dolor sit amet. Lorem ispum dolor sit amet. Lorem ispum dolor sit amet.</p></span></li>
-					<li><img src="img/test_image_4.jpg" alt="Test Image 4" width="960" height="399" /><span><h3>Heading here</h3><p>Lorem ispum dolor sit amet. Lorem ispum dolor sit amet. Lorem ispum dolor sit amet. Lorem ispum dolor sit amet. Lorem ispum dolor sit amet.</p></span></li>
-					<li><img src="img/test_image_5.jpg" alt="Test Image 5" width="960" height="399" /><span><h3>Heading here</h3><p>Lorem ispum dolor sit amet. Lorem ispum dolor sit amet. Lorem ispum dolor sit amet. Lorem ispum dolor sit amet. Lorem ispum dolor sit amet.</p></span></li>
-					<li><img src="img/test_image_6.jpg" alt="Test Image 5" width="960" height="399" /><span><h3>Heading here</h3><p>Lorem ispum dolor sit amet. Lorem ispum dolor sit amet. Lorem ispum dolor sit amet. Lorem ispum dolor sit amet. Lorem ispum dolor sit amet.</p></span></li>
+					<li><img src="img/test_image_1.jpg" alt="Test Image 1" width="960" height="399" /><span><h3>Heading here</h3><p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p></span></li>
+					<li><img src="img/test_image_2.jpg" alt="Test Image 2" width="960" height="399" /><span><h3>Heading here</h3><p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p></span></li>
+					<li><img src="img/test_image_3.jpg" alt="Test Image 3" width="960" height="399" /><span><h3>Heading here</h3><p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p></span></li>
+					<li><img src="img/test_image_4.jpg" alt="Test Image 4" width="960" height="399" /><span><h3>Heading here</h3><p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p></span></li>
+					<li><img src="img/test_image_5.jpg" alt="Test Image 5" width="960" height="399" /><span><h3>Heading here</h3><p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p></span></li>
+					<li><img src="img/test_image_6.jpg" alt="Test Image 5" width="960" height="399" /><span><h3>Heading here</h3><p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p></span></li>
 				</ul>
 				<div class="content">
+					<h2><span>Demo</span></h2>
+					<p>View our demonstrations:</p>
+					<ul>
+						<li><a href="src/example1.html">Example 1</a></li>
+					</ul>
 					<h2><span>Features</span></h2>
 					<p>This plugin was built to make creating a slideshow on your website extremely simple and painless. By including the few files provided in this package, you'll be up and running within minutes.</p>
 					<ul>
@@ -41,7 +47,7 @@
 					<p>Firstly, you'll need to reference the SnapMotion JavaScript and CSS files within your &lt;head&gt; tag.</p>
 					<pre class="brush: html">
 						&lt;script src="js/jquery.snapmotion.js"&gt;&lt;/script&gt;
-						&lt;link rel="stylesheet" href="css/jquery.snapmotion.css" type="text/css" /&gt;</pre>
+						&lt;link rel="stylesheet" href="css/snapmotion.css" type="text/css" /&gt;</pre>
 					<p>Create your slides using a &lt;ul&gt; with a &lt;li&gt; for each slide. Each &lt;li&gt; should include the slide &lt;img /&gt; and a &lt;span&gt; tag containing any text you'd like to display on the slide.</p>
 					<p>For example:</p>
 					<pre class="brush: html">
