--- a/index.html
+++ b/index.html
@@ -2,17 +2,15 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />		
-		<link rel="stylesheet" href="css/shCore.css" type="text/css" />
-		<link rel="stylesheet" href="css/shThemeDefault.css" type="text/css" />
+		<link rel="stylesheet" href="css/syntaxHighlighting.css" type="text/css" />
 		<link rel="stylesheet" href="css/style.css" type="text/css" />
 		<script src="js/html5.js"></script>
-		<script src="js/less-1.0.18.min.js"></script>
 		<script src="js/shCore.js"></script>
 		<script src="js/shBrushXml.js"></script>
 		<script src="js/shBrushCss.js"></script>
 		<script src="js/shBrushJScript.js"></script>
-		<script src="js/jquery-1.4.2.min.js"></script>
-		<script src="js/jquery.snapmotion.js"></script>
+		<script src="src/js/jquery-1.4.2.min.js"></script>
+		<script src="src/js/jquery-snapmotion.min.js"></script>
 	</head>
 	
 	<body>
@@ -23,12 +21,12 @@
 			</header>
 			<section class="main">
 				<ul id="slideshow">
-					<li><img src="img/test_image_1.jpg" alt="Test Image 1" width="960" height="399" /><span><h3>Heading here</h3><p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p></span></li>
-					<li><img src="img/test_image_2.jpg" alt="Test Image 2" width="960" height="399" /><span><h3>Heading here</h3><p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p></span></li>
-					<li><img src="img/test_image_3.jpg" alt="Test Image 3" width="960" height="399" /><span><h3>Heading here</h3><p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p></span></li>
-					<li><img src="img/test_image_4.jpg" alt="Test Image 4" width="960" height="399" /><span><h3>Heading here</h3><p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p></span></li>
-					<li><img src="img/test_image_5.jpg" alt="Test Image 5" width="960" height="399" /><span><h3>Heading here</h3><p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p></span></li>
-					<li><img src="img/test_image_6.jpg" alt="Test Image 5" width="960" height="399" /><span><h3>Heading here</h3><p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p></span></li>
+					<li><img src="src/img/test_image_1.jpg" alt="Test Image 1" width="960" height="399" /><span><h3>Heading here</h3><p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p></span></li>
+					<li><img src="src/img/test_image_2.jpg" alt="Test Image 2" width="960" height="399" /><span><h3>Heading here</h3><p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p></span></li>
+					<li><img src="src/img/test_image_3.jpg" alt="Test Image 3" width="960" height="399" /><span><h3>Heading here</h3><p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p></span></li>
+					<li><img src="src/img/test_image_4.jpg" alt="Test Image 4" width="960" height="399" /><span><h3>Heading here</h3><p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p></span></li>
+					<li><img src="src/img/test_image_5.jpg" alt="Test Image 5" width="960" height="399" /><span><h3>Heading here</h3><p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p></span></li>
+					<li><img src="src/img/test_image_6.jpg" alt="Test Image 5" width="960" height="399" /><span><h3>Heading here</h3><p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p></span></li>
 				</ul>
 				<div class="content">
 					<h2><span>Demo</span></h2>
