Fix hardcoded ID's. Remove minified versions from non-bundled release. Prefix class names to prevent conflicts. Use source stylesheet in main demo page

--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />		
 		<link rel="stylesheet" href="css/syntaxHighlighting.css" type="text/css" />
 		<link rel="stylesheet" href="css/style.css" type="text/css" />
+		<link rel="stylesheet" href="src/css/jquery-snapmotion.css" type="text/css" />
+
 		<script src="js/html5.js"></script>
 		<script src="js/shCore.js"></script>
 		<script src="js/shBrushXml.js"></script>
 		<script src="js/shBrushCss.js"></script>
 		<script src="js/shBrushJScript.js"></script>
 		<script src="src/js/jquery-1.4.2.min.js"></script>
-		<script src="src/js/jquery-snapmotion.min.js"></script>
+		<script src="src/js/jquery-snapmotion.js"></script>
+		
 	</head>
 	
 	<body>
@@ -21,12 +24,12 @@
 			</header>
 			<section class="main">
 				<ul id="slideshow">
-					<li><img src="src/img/test_image_1.jpg" alt="Test Image 1" width="960" height="399" /><span><h3>Heading here</h3><p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p></span></li>
-					<li><img src="src/img/test_image_2.jpg" alt="Test Image 2" width="960" height="399" /><span><h3>Heading here</h3><p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p></span></li>
-					<li><img src="src/img/test_image_3.jpg" alt="Test Image 3" width="960" height="399" /><span><h3>Heading here</h3><p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p></span></li>
-					<li><img src="src/img/test_image_4.jpg" alt="Test Image 4" width="960" height="399" /><span><h3>Heading here</h3><p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p></span></li>
-					<li><img src="src/img/test_image_5.jpg" alt="Test Image 5" width="960" height="399" /><span><h3>Heading here</h3><p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p></span></li>
-					<li><img src="src/img/test_image_6.jpg" alt="Test Image 5" width="960" height="399" /><span><h3>Heading here</h3><p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p></span></li>
+					<li><img src="src/img/test_image_1.jpg" alt="Test Image 1" width="960" height="399" /><span><h3>Heading 1</h3><p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p></span></li>
+					<li><img src="src/img/test_image_2.jpg" alt="Test Image 2" width="960" height="399" /><span><h3>Heading 2</h3><p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p></span></li>
+					<li><img src="src/img/test_image_3.jpg" alt="Test Image 3" width="960" height="399" /><span><h3>Heading 3</h3><p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p></span></li>
+					<li><img src="src/img/test_image_4.jpg" alt="Test Image 4" width="960" height="399" /><span><h3>Heading 4</h3><p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p></span></li>
+					<li><img src="src/img/test_image_5.jpg" alt="Test Image 5" width="960" height="399" /><span><h3>Heading 5</h3><p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p></span></li>
+					<li><img src="src/img/test_image_6.jpg" alt="Test Image 5" width="960" height="399" /><span><h3>Heading 6</h3><p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p></span></li>
 				</ul>
 				<div class="content">
 					<h2><span>What is it?</span></h2>
