--- a/src/example1.html
+++ b/src/example1.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />		
 		<link rel="stylesheet" href="css/jquery-snapmotion.css" type="text/css" />
 		<script src="js/jquery-1.4.2.min.js"></script>
-		<script src="js/jquery-snapmotion.min.js"></script>
+		<script src="js/jquery-snapmotion.js"></script>
 		<style type="text/css">
 			html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p,
 			blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em,
