--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 		<link rel="stylesheet" href="css/syntaxHighlighting.css" type="text/css" />
 		<link rel="stylesheet" href="css/style.css" type="text/css" />
 		<link rel="stylesheet" href="src/css/jquery-snapmotion.css" type="text/css" />
-
 		<script src="js/html5.js"></script>
 		<script src="js/shCore.js"></script>
 		<script src="js/shBrushXml.js"></script>
@@ -36,12 +35,14 @@
 					<p>SnapMotion is a free, open source (<a href="http://www.opensource.org/licenses/mit-license.html">MIT License</a>) jQuery plugin. It is easily integrated into your website.</p>
 
 					<h2><span>Compatibility</span></h2>
-					<p>Firefox 3.6+, Chrome 5+, Safari 5. Other browser may work fine, this is untested. YMMV.</p>
+					<p>Firefox 3.6+, Chrome 5+, Safari 5. Other browsers may work fine, this is untested. YMMV.</p>
 
 					<h2><span>Demo</span></h2>
 					<p>View our demonstrations:</p>
 					<ul>
-						<li><a href="src/example1.html">Example 1</a></li>
+						<li><a href="src/example1.html">Example 1</a> <em>(slideX)</em></li>
+						<li><a href="src/example2.html">Example 2</a> <em>(slideY)</em></li>
+						<li><a href="src/example3.html">Example 3</a> <em>(fade)</em></li>
 					</ul>
 					<h2><span>Features</span></h2>
 					<p>This plugin was built to make creating a slideshow on your website extremely simple and painless. By including the few files provided in this package, you'll be up and running within minutes.</p>
@@ -60,17 +61,17 @@
 					<pre class="brush: html">
 						&lt;ul id="slideshow"&gt;
 							<li>
-								<img src="src/img/test_image_1.jpg" alt="Test Image 1" width="960" height="399" />
+								<img src="img/test_image_1.jpg" alt="Test Image 1" width="960" height="400" />
 								<span>
-									<h3>Heading here</h3>
-									<p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p>
+									<h3>Heading 1</h3>
+									<p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p>
 								</span>
 							</li>
 							<li>
-								<img src="src/img/test_image_2.jpg" alt="Test Image 2" width="960" height="399" />
+								<img src="img/test_image_2.jpg" alt="Test Image 2" width="960" height="400" />
 								<span>
-									<h3>Heading here</h3>
-									<p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p>
+									<h3>Heading 2</h3>
+									<p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p>
 								</span>
 							</li>
 						&lt;/ul&gt;</pre>
@@ -79,19 +80,25 @@
 						$("ul#slideshow").SnapMotion();</pre>
 					<p>Optional parameters include:</p>
 					<ul>
-						<li><em>slideWidth</em> (the width of a slide)</li>
-						<li><em>controlIndent</em> (the indentation of the 'controls' for the slideshow, in pixels, from the left of each slide)</li>
-						<li><em>animationLength</em> (the length, in milliseconds, of each slide transition)</li>
-						<li><em>delay</em> (the length, in milliseconds, between each slide transition)</li>
+						<li><em>slideWidth</em> (int, the width of a slide)</li>
+						<li><em>slideHeight</em> (int, the height of a slide)</li>
+						<li><em>showCaption</em> (boolean, whether to show a caption)</li>
+						<li><em>showControls</em> (boolean, whether to show next/previous controls)</li>
+						<li><em>controlIndentX</em> (int, the indentation of the 'controls' for the slideshow, in pixels, from the left of each slide)</li>
+						<li><em>controlIndentY</em> (int, the indentation of the 'controls' for the slideshow, in pixels, from the top of each slide)</li>
+						<li><em>animationLength</em> (int, the length, in milliseconds, of each slide transition)</li>
+						<li><em>delay</em> (int, the length, in milliseconds, between each slide transition)</li>
+						<li><em>transition</em> (string, <em>slideX (default)</em>, <em>slideY</em>, <em>fade</em>)</li>
 					</ul>
 					<pre class="brush: js">
 						&lt;script type="text/javascript"&gt;
 							$(document).ready(function(){
 								$("ul#slideshow").SnapMotion({
-									'slideWidth'	: 960,
+									'slideWidth'		: 960,
 									'controlIndent'		: 640,
 									'animationLength'	: 375,
-									'delay'		: 7500
+									'delay'				: 7500,
+									'transition'		: 'slideY'
 								});
 							});
 						&lt;/script&gt;</pre>
@@ -104,12 +111,7 @@
 				$(document).ready(function(){
 					SyntaxHighlighter.all();
 					
-					$("ul#slideshow").SnapMotion({
-						'slideWidth'	: 960,
-						'controlIndent'		: 640,
-						'animationLength'	: 375,
-						'delay'		: 7500
-					});
+					$("ul#slideshow").SnapMotion();
 
 					setTimeout(function(){
 						$("div.toolbar").hide();
