--- a/src/example2.html
+++ b/src/example2.html
@@ -51,7 +51,9 @@
 		</ul>
 		<script type="text/javascript">
 			$(document).ready(function(){
-				$("ul#slideshow").SnapMotion();
+				$("ul#slideshow").SnapMotion({
+					'transition'		: 'slideY'
+				});
 			});
 		</script>
 	</body>
