--- a/src/example3.html
+++ b/src/example3.html
@@ -51,7 +51,10 @@
 		</ul>
 		<script type="text/javascript">
 			$(document).ready(function(){
-				$("ul#slideshow").SnapMotion();
+				$("ul#slideshow").SnapMotion({
+					'animationLength'	: 750,
+					'transition'		: 'fade'
+				});
 			});
 		</script>
 	</body>
