cross browser compatibility

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 		<script src="js/shBrushJScript.js"></script>
 		<script src="src/js/jquery-1.4.2.min.js"></script>
 		<script src="src/js/jquery-snapmotion.js"></script>
-		
+		<!--[if IE 6]>
+		<script src="js/DD_belatedPNG_0.0.8a.js"></script>
+		<script>
+		  DD_belatedPNG.fix('h1, span.jQueryLogo, div.snapmotion-controls ul li, ul.controls li a');
+		</script>
+		<![endif]-->
 	</head>
 	
 	<body>
@@ -35,7 +40,7 @@
 					<p>SnapMotion is a free, open source (<a href="http://www.opensource.org/licenses/mit-license.html">MIT License</a>) jQuery plugin. It is easily integrated into your website.</p>
 
 					<h2><span>Compatibility</span></h2>
-					<p>Firefox 3.6+, Chrome 5+, Safari 5. Other browsers may work fine, this is untested. YMMV.</p>
+					<p>Firefox 3+, Chrome 5+, Safari 3+, Opera 9+, IE6+.</p>
 
 					<h2><span>Demo</span></h2>
 					<p>View our demonstrations:</p>
