--- a/src/example1.html
+++ b/src/example1.html
@@ -51,7 +51,9 @@
 		</ul>
 		<script type="text/javascript">
 			$(document).ready(function(){
-				$("ul#slideshow").SnapMotion();
+				$("ul#slideshow").SnapMotion({
+					'transition' : 'slideX'
+				});
 			});
 		</script>
 	</body>
