--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
 						<li><em>slideWidth</em> (int, the width of a slide)</li>
 						<li><em>slideHeight</em> (int, the height of a slide)</li>
 						<li><em>showCaption</em> (boolean, whether to show a caption)</li>
+						<li><em>captionWidth</em> (int, the width of the caption area)
+						<li><em>captionHeight</em> (int, the height of the caption area)
 						<li><em>showControls</em> (boolean, whether to show next/previous controls)</li>
 						<li><em>controlIndentX</em> (int, the indentation of the 'controls' for the slideshow, in pixels, from the left of each slide)</li>
 						<li><em>controlIndentY</em> (int, the indentation of the 'controls' for the slideshow, in pixels, from the top of each slide)</li>
